# azure-app-service-boilerplate-demo1

./: .pre-commit-config.yaml  DOCKER_COMPOSE_README.md  README.md  config.json  docker-compose.env  docker-compose.yml  env.pgadmin.template  env.postgres.template  env.redis-commander.template  env.redis.template  pyproject.toml  requirements.txt  startup.sh  web.config
examples/: settings_example.py
scripts/: build.sh  convert_json_to_hcl.py  deploy_azure.sh  docker-compose-helper.sh  get_environment_config.sh  init-db.sql  init_terraform.sh  install_hcl2json.sh  redis.conf  setup-env-files.sh  setup.py
src/: main.py
src/application/use_cases/: say_hello_use_case.py
src/domain/greeting/: greeting_service.py
src/infrastructure/: __init__.py
src/infrastructure/config_loaders/: config_loader_factory.py
src/infrastructure/config_loaders/config_loader_args/: __init__.py
src/infrastructure/config_loaders/config_loader_args/azure_keyvault_config_loader_args/: __init__.py  azure_keyvault_env_config_loader_args.py
src/infrastructure/config_loaders/config_loader_args/azure_storage_config_loader_args/: __init__.py  azure_storage_env_config_loader_args.py
src/infrastructure/config_loaders/config_providers/: __init__.py  azure_keyvault_config_provider.py  azure_storage_config_provider.py
src/infrastructure/config_loaders/decorators/: __init__.py  base_inject_settings.py  load_settings_from_config_loader.py
src/infrastructure/config_loaders/decorators/azure_keyvault_settings_decorators/: __init__.py  inject_settings_from_azure_keyvault_env.py
src/infrastructure/config_loaders/decorators/azure_storage_settings_decorators/: __init__.py  inject_settings_from_azure_storage_env.py
src/infrastructure/decorators/: pipeline_decorator.py
src/infrastructure/dependency_injection_configurations/: __init__.py  build_di_container.py  greeting_module.py  logging_module.py  redis_module.py  repositories_module.py  settings_module.py  shared_pipeline.py  sqlalchemy_module.py  web_framework_module.py
src/infrastructure/logger/logger_strategies/: __init__.py  default_logger_strategy.py  logger_strategy.py
src/infrastructure/middlewares/: __init__.py  container_builder_middleware.py  error_handling_middleware.py  inject_dependency_middleware.py  jwt_authentication_middleware.py  log_class_middleware.py  logger_middleware.py  performance_middleware.py  redis_cache_middleware.py  request_validation_middleware.py  session_management_middleware.py  time_class_middleware.py  time_middleware.py  typed_cloud_event_middleware.py  typed_request_middleware.py
src/infrastructure/models/database/: __init__.py  base_model.py  organization_model.py  session_model.py  user_model.py  user_organization_model.py
src/infrastructure/models/settings/: __init__.py  basic_settings.py  settings.py  settings_loader.py
src/infrastructure/repositories/: __init__.py  auth_repository.py  base_repository.py  organization_repository.py  user_repository.py
src/infrastructure/web_apps/: __init__.py  fastapi_web_app.py  flask_web_app.py  web_app_interface.py
src/interfaces/: __init__.py
src/interfaces/dtos/greeting/: __init__.py
src/interfaces/http/: __init__.py  auth_controller.py  authenticated_controller.py  greeting_controller.py  say_hello.rest
src/interfaces/startup/: __init__.py  application_bootstrap.py
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/function/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  variables.tf
tests/unit/: test_azure_config.py
tests/unit/domain/greeting/: test_greeting_service.py
tests/unit/domain/greeting/greeting_strategies/: test_basic_greeting_strategy.py
tests/unit/interfaces/: test_say_hello_http.py
tests/unit/settings/: test_settings_with_config_loaders.py
